refactor: login 및 전체 구조 수정 보완
구조 및 전체 소스 수정 보완
